artf/updates to source (#4443)
