# flyteartifacts/pkg/server/interfaces.go
@@ -21,6 +21,12 @@ type StorageInterface interface {
 	GetTriggersByArtifactKey(ctx context.Context, key core.ArtifactKey) ([]models.Trigger, error)
 
 	// DeleteTrigger(context.Context, models.Trigger) error
+
+	SearchArtifacts(context.Context, artifact.SearchArtifactsRequest) ([]models.Artifact, string, error)
+
+	SetExecutionInputs(ctx context.Context, req *artifact.ExecutionInputsRequest) error
+
+	FindByWorkflowExec(ctx context.Context, request *artifact.FindByWorkflowExecRequest) ([]models.Artifact, error)
 }
 
 type BlobStoreInterface interface {
